--- a/css/dark.css
+++ b/css/dark.css
@@ -68,16 +68,33 @@ a {
     text-decoration: none; }
 
 .media-container {
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-align-content: flex-start;
+  -ms-flex-line-pack: start;
   align-content: flex-start;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
   align-items: stretch;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
   padding: 0; }
 
 .no-flex {
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  -ms-grid-row-align: flex-start;
   align-items: flex-start; }
 
 .media-panel {
@@ -117,9 +134,6 @@ a {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  -webkit-transition: .1s ease-out;
-  -moz-transition: .1s ease-out;
-  -o-transition: .1s ease-out;
   transition: .1s ease-out;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background-size: cover;
@@ -136,9 +150,6 @@ a {
   background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.75) 75%);
   margin: 0;
   line-height: 1.35;
-  -webkit-transition: .1s ease-out;
-  -moz-transition: .1s ease-out;
-  -o-transition: .1s ease-out;
   transition: .1s ease-out;
   overflow: hidden;
   font-size: 1em; }
@@ -162,8 +173,12 @@ a {
   right: 0;
   bottom: 0;
   padding: 0;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
   transform: scale(0);
-  transition: transform 0.25s ease-in-out; }
+  transition: -webkit-transform 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out, -webkit-transform 0.25s ease-in-out; }
   @media only screen and (min-width: 768px) {
     .jumpList {
       top: 100px; } }
@@ -171,11 +186,23 @@ a {
     list-style: none;
     padding: 5vh 5vw;
     margin: 0;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
     align-content: flex-start;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
     align-items: stretch;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex; }
   .jumpList li {
     font-size: 2em;
@@ -192,6 +219,8 @@ a {
     color: #dddddd; }
   .jumpList.visible {
     display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
     transform: scale(1); }
 
 .btn.focus, .btn:focus, .btn:hover {
