--- a/css/dark.css
+++ b/css/dark.css
@@ -35,12 +35,13 @@ form .theme-alt input.form-control:focus, form .theme-alt textarea.form-control:
 body {
   padding-top: 55px;
   padding-bottom: 80px;
-  -moz-user-select: none;
-  -khtml-user-select: none;
   -webkit-user-select: none;
+  -moz-user-select: none;
   -ms-user-select: none;
+  user-select: none;
   background: black;
-  color: white; }
+  color: white;
+  transition: color 0.15s ease-in, background-color 0.15s ease-in; }
   @media only screen and (min-width: 768px) {
     body {
       padding-top: 110px; } }
