--- a/css/dark.css
+++ b/css/dark.css
@@ -15,22 +15,19 @@ form .theme-alt input.form-control:focus, form .theme-alt textarea.form-control:
   color: #ffffff; }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
   /* for vertical scrollbars */
-  height: 6px;
+  height: 4px;
   /* for horizontal scrollbars */ }
 
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.1); }
+  background-color: rgba(0, 0, 0, 0.2); }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.5); }
+  background-color: #0078d7; }
 
 ::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.1); }
-
-::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.5); }
+  background: rgba(255, 255, 255, 0.2); }
 
 body {
   padding-top: 55px;
@@ -51,6 +48,16 @@ body {
     margin-left: 0;
     margin-right: 0;
     width: 100%; } }
+
+.preloader {
+  width: 320px;
+  margin: 0 auto;
+  text-align: center; }
+  .preloader .progress-bar {
+    height: 0;
+    width: 180px;
+    margin: 0 auto;
+    float: none; }
 
 .progress-bar {
   height: 0; }
