--- a/css/dark.css
+++ b/css/dark.css
@@ -38,7 +38,7 @@ body {
   transition: color 0.15s ease-in, background-color 0.15s ease-in; }
   @media only screen and (min-width: 768px) {
     body {
-      padding-top: 110px; } }
+      padding-top: 105px; } }
 
 @media only screen and (max-width: 767px) {
   .container {
@@ -49,7 +49,8 @@ body {
 .preloader {
   width: 320px;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  background: black; }
   .preloader .progress-bar {
     height: 0;
     width: 180px;
@@ -65,6 +66,15 @@ body {
     width: 0;
     height: 4px;
     transition: width 0.1s linear; }
+
+.loading-fixed {
+  left: calc(50% - 160px);
+  position: fixed;
+  top: 50px;
+  z-index: 1000; }
+  @media only screen and (min-width: 768px) {
+    .loading-fixed {
+      top: 100px; } }
 
 a {
   cursor: pointer; }
