[TASK] Focus input on search

--- a/css/dark.css
+++ b/css/dark.css
@@ -83,33 +83,24 @@ a {
     text-decoration: none; }
 
 .media-container {
-  -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-align-content: flex-start;
   -ms-flex-line-pack: start;
   align-content: flex-start;
-  -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   padding: 0; }
 
 .no-flex {
-  -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-align-items: flex-start;
   -ms-flex-align: start;
-  -ms-grid-row-align: flex-start;
   align-items: flex-start; }
 
 .media-panel {
@@ -188,12 +179,9 @@ a {
   right: 0;
   bottom: 0;
   padding: 0;
-  -webkit-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
-  transition: -webkit-transform 0.25s ease-in-out;
-  transition: transform 0.25s ease-in-out;
-  transition: transform 0.25s ease-in-out, -webkit-transform 0.25s ease-in-out; }
+  transition: transform 0.25s ease-in-out; }
   @media only screen and (min-width: 768px) {
     .jumpList {
       top: 100px; } }
@@ -201,22 +189,16 @@ a {
     list-style: none;
     padding: 5vh 5vw;
     margin: 0;
-    -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    -webkit-align-content: flex-start;
     -ms-flex-line-pack: start;
     align-content: flex-start;
-    -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; }
   .jumpList li {
@@ -234,7 +216,6 @@ a {
     color: #dddddd; }
   .jumpList.visible {
     display: block;
-    -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1); }
 
