--- a/css/dark.css
+++ b/css/dark.css
@@ -35,6 +35,7 @@ body {
   user-select: none;
   background: black;
   color: white;
+  font-size: 17px;
   transition: color 0.15s ease-in, background-color 0.15s ease-in; }
   @media only screen and (min-width: 768px) {
     body {
@@ -135,6 +136,9 @@ a {
       .media-panel:nth-child(5n) {
         margin-right: 1vw; } }
 
+.nav > li > a {
+  padding: 0 15px; }
+
 .panel-background {
   position: relative;
   width: 100%;
@@ -153,17 +157,15 @@ a {
   bottom: -1px;
   left: -1px;
   right: -1px;
-  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.75) 75%);
+  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
   margin: 0;
   line-height: 1.35;
   transition: .1s ease-out;
   overflow: hidden;
-  font-size: 1em; }
+  text-align: center; }
   @media only screen and (min-width: 768px) {
     .panel-info {
-      padding: 10px 15px;
-      font-size: 16px;
-      background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.75) 100%); } }
+      padding: 10px 15px; } }
   .panel-info span {
     display: block;
     overflow: hidden;
@@ -259,11 +261,17 @@ input.form-control:focus, textarea.form-control:focus {
   .side-nav__container .side-nav__content .search-bar .input-group-addon, .side-nav-xl .side-nav__content .search-bar .input-group-addon {
     color: white; }
 
+.list-group-item {
+  padding: 10px 5px; }
+
 .list-group-item:nth-child(2n+1) {
   background-color: #202020; }
 
 .player {
   background-color: #202020; }
+  @media only screen and (min-width: 1200px) {
+    .player .col-player-special {
+      width: calc(100% - 25% - 85px); } }
 
 .header-seperator {
   overflow: hidden;
