--- a/css/dark.css
+++ b/css/dark.css
@@ -43,8 +43,8 @@ body {
 
 @media only screen and (max-width: 767px) {
   .container {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
     width: 100%; } }
 
 .preloader {
@@ -189,14 +189,14 @@ a {
       top: 100px; } }
   .jumpList ol {
     list-style: none;
-    padding: 5vh 5vw;
+    padding: 3vh 3vw;
     margin: 0;
     -ms-flex-direction: row;
     flex-direction: row;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -ms-flex-pack: center;
-    justify-content: center;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     -ms-flex-line-pack: start;
     align-content: flex-start;
     -ms-flex-align: stretch;
@@ -223,14 +223,16 @@ a {
 
 .jumpList-years li {
   font-size: 1.4em;
-  width: 17vw; }
+  width: 18vw;
+  margin: 5px 0 0 0; }
   @media only screen and (min-width: 768px) {
     .jumpList-years li {
       font-size: 1.5em; } }
 
-.btn.focus, .btn:focus, .btn:hover {
+.btn.focus, .btn:focus, .btn:hover, .btn:active {
   color: white;
-  outline: none; }
+  outline: none;
+  box-shadow: none; }
 
 input.form-control:focus, textarea.form-control:focus {
   color: white;
@@ -267,11 +269,19 @@ input.form-control:focus, textarea.form-control:focus {
 .list-group-item:nth-child(2n+1) {
   background-color: #202020; }
 
+.list-group-item:hover {
+  background-color: #2d2d2d; }
+
+.list-group-item .glyph {
+  vertical-align: top;
+  margin-top: 5px; }
+
 .player {
   background-color: #202020; }
-  @media only screen and (min-width: 1200px) {
-    .player .col-player-special {
-      width: calc(100% - 25% - 85px); } }
+
+.volume-control {
+  background-color: black;
+  border: 1px solid #0078d7; }
 
 .header-seperator {
   overflow: hidden;
@@ -324,3 +334,6 @@ input.form-control:focus, textarea.form-control:focus {
   border-color: rgba(255, 255, 255, 0.6);
   background-color: #202020;
   color: white; }
+
+.actions {
+  background-color: black; }
