[TASK] Add visualisation

--- a/css/dark.css
+++ b/css/dark.css
@@ -109,7 +109,10 @@ a {
   height: 48vw;
   margin: 0 2vw 2vw 0;
   cursor: pointer;
-  background-image: url("../../global/images/no-cover.png"); }
+  background-image: url("../global/images/no-cover.png");
+  background-size: contain; }
+  .media-panel.artist-panel {
+    background-image: url("../global/images/no-artist.png"); }
   .media-panel:nth-child(2n) {
     margin-right: 0; }
   @media only screen and (min-width: 480px) {
@@ -208,11 +211,11 @@ a {
     font-weight: bold;
     display: inline-block;
     text-align: center;
-    width: 21vw; }
+    width: 25%; }
     @media only screen and (min-width: 768px) {
       .jumpList li {
         font-size: 3em;
-        width: 17vw; } }
+        width: 16.6%; } }
   .jumpList a:hover {
     text-decoration: none;
     color: #dddddd; }
@@ -223,11 +226,12 @@ a {
 
 .jumpList-years li {
   font-size: 1.4em;
-  width: 18vw;
+  width: 25%;
   margin: 5px 0 0 0; }
   @media only screen and (min-width: 768px) {
     .jumpList-years li {
-      font-size: 1.5em; } }
+      font-size: 1.5em;
+      width: 16.6%; } }
 
 .btn.focus, .btn:focus, .btn:hover, .btn:active {
   color: white;
@@ -337,3 +341,7 @@ input.form-control:focus, textarea.form-control:focus {
 
 .actions {
   background-color: black; }
+
+canvas {
+  width: 900px;
+  display: none; }
