--- a/css/dark.css
+++ b/css/dark.css
@@ -10,7 +10,14 @@
 :-ms-input-placeholder {
   color: #cccccc !important; }
 
-form .theme-alt input.form-control:focus, form .theme-alt textarea.form-control:focus, form .theme-on-img-dark input.form-control:focus, form .theme-on-img-dark textarea.form-control:focus, form.theme-alt input.form-control:focus, form.theme-alt textarea.form-control:focus, form.theme-on-img-dark input.form-control:focus, form.theme-on-img-dark textarea.form-control:focus {
+form .theme-alt input.form-control:focus,
+form .theme-alt textarea.form-control:focus,
+form .theme-on-img-dark input.form-control:focus,
+form .theme-on-img-dark textarea.form-control:focus,
+form.theme-alt input.form-control:focus,
+form.theme-alt textarea.form-control:focus,
+form.theme-on-img-dark input.form-control:focus,
+form.theme-on-img-dark textarea.form-control:focus {
   background-color: rgba(0, 0, 0, 0.8);
   color: #ffffff; }
 
@@ -174,10 +181,11 @@ a,
   line-height: 1.35;
   transition: .1s ease-out;
   overflow: hidden;
-  text-align: center; }
+  text-align: center;
+  text-shadow: 0px 0px 3px black; }
   @media only screen and (min-width: 768px) {
     .panel-info {
-      padding: 10px 15px; } }
+      padding: 10px; } }
   .panel-info span {
     display: block;
     overflow: hidden;
@@ -265,6 +273,17 @@ textarea.form-control:focus {
     color: white;
     background: black;
     border: 1px solid white; }
+
+.side-nav-xl {
+  position: fixed;
+  left: 0;
+  top: 100px;
+  height: calc(100% - 100px);
+  z-index: 13;
+  overflow-y: auto;
+  overflow-x: hidden; }
+  .isPlaying .side-nav-xl {
+    height: calc(100% - 100px - 80px); }
 
 .side-nav__container,
 .side-nav-xl {
