--- a/css/dark.css
+++ b/css/dark.css
@@ -97,16 +97,23 @@ a,
   fill: white; }
 
 .media-container {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
   flex-direction: row;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
   justify-content: center;
   align-content: flex-start;
+  -webkit-box-align: stretch;
   align-items: stretch;
+  display: -webkit-box;
   display: flex;
   padding: 0; }
 
 .no-flex {
+  -webkit-box-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: start;
   align-items: flex-start; }
 
 .media-panel {
@@ -196,8 +203,11 @@ a,
   right: 0;
   bottom: 0;
   padding: 0;
+  -webkit-transform: scale(0);
   transform: scale(0);
-  transition: transform 0.25s ease-in-out; }
+  transition: -webkit-transform 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out, -webkit-transform 0.25s ease-in-out; }
   @media only screen and (min-width: 768px) {
     .jumpList {
       top: 100px; } }
@@ -205,11 +215,16 @@ a,
     list-style: none;
     padding: 3vh 3vw;
     margin: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     flex-direction: row;
     flex-wrap: wrap;
+    -webkit-box-pack: start;
     justify-content: flex-start;
     align-content: flex-start;
+    -webkit-box-align: stretch;
     align-items: stretch;
+    display: -webkit-box;
     display: flex; }
   .jumpList li {
     font-size: 2em;
@@ -226,6 +241,7 @@ a,
     color: #dddddd; }
   .jumpList.visible {
     display: block;
+    -webkit-transform: scale(1);
     transform: scale(1); }
 
 .jumpList-years li {
