--- a/css/dark.css
+++ b/css/dark.css
@@ -310,10 +310,8 @@ textarea.form-control:focus {
     color: white; }
 
 .list-group-item {
-  padding: 10px 5px; }
-
-.list-group-item:nth-child(2n+1) {
-  background-color: #202020; }
+  padding: 10px 5px;
+  border-bottom: 1px solid #2d2d2d; }
 
 .list-group-item:hover {
   background-color: #2d2d2d; }
